# PROM06-Artifact

./: .gitignore  README.md  docker-compose.yml
browser-extension/: manifest.json  package-lock.json  package.json
browser-extension/source/: manifest.json
browser-extension/source/Background/: index.ts
browser-extension/source/ContentScript/: index.ts
browser-extension/source/Popup/: Popup.tsx  styles.scss
cyberbullying-detection-api/: __main__.py  main.py  pyproject.toml
cyberbullying-detection-api/service/: cyberbully_detection_service.py
cyberbullying-ff-api/: build.gradle.kts  settings.gradle.kts
cyberbullying-ff-api/src/main/kotlin/com/rizkima/cyberbullyingffapi/: CyberbullyingFfApiApplication.kt
cyberbullying-ff-api/src/main/kotlin/com/rizkima/cyberbullyingffapi/config/: RedisConfig.kt
cyberbullying-ff-api/src/main/kotlin/com/rizkima/cyberbullyingffapi/controller/: CyberBullyingUserController.kt
cyberbullying-ff-api/src/main/kotlin/com/rizkima/cyberbullyingffapi/enum/: NotificationTargetType.kt  ScreeningResultType.kt  ScreeningType.kt
cyberbullying-ff-api/src/main/kotlin/com/rizkima/cyberbullyingffapi/feign/: CyberBullyTwitterAPIFeign.kt
cyberbullying-ff-api/src/main/resources/: application.properties
cyberbullying-ff-api/src/test/kotlin/com/rizkima/cyberbullyingffapi/: CyberbullyingFfApiApplicationTests.kt
docs/api_spec/: api_design.yaml
docs/data_model/: db_design.puml
docs/sequence/: screen_cyberbully_twitter.puml
http-test/: screening-api.http
load-test/: script-standalone.js  script.js
migration/: V1__init.sql
(+17 files in other folders)
